--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="conteudo">
 					<i class="logo"></i>
 					<h2 class="nome-personagem">Yondu</h2>
-					<p class="descricao">Yondu é um espécime físico acima da média de sua raça. Ele tem um pouco mais de resistência do que o macho humano médio e é cerca de 1,5 vezes mais forte que um ser humano. Yondu pode levantar cerca de 375 kg. Um aprendiz de caçador, Yondu é proficiente no uso de arco e flecha. Sua habilidade de assobiar com uma faixa de quatro oitavas facilita seus tiros com o arco. A língua nativa centauriana é um dialeto de grunhidos, cliques e assobios, mas Yondu conseguiu aprender a língua inglesa, embora seja doloroso para ele falar por muito tempo sem que sua garganta canse.</p>
+					<p class="descricao">Yondu é um espécime físico acima da média de sua raça. Ele pode levantar cerca de 375 kg. Aprendiz de caçador, Yondu é proficiente no uso de arco e flecha. Sua habilidade de assobiar com uma faixa de quatro oitavas facilita seus tiros com o arco. A língua nativa centauriana é um dialeto de grunhidos, cliques e assobios, mas Yondu conseguiu aprender português, embora seja doloroso para ele falar por muito tempo sem que sua garganta canse.</p>
 				</div>	
 			</div>
 
