--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="conteudo">
 					<i class="logo"></i>
 					<h2 class="nome-personagem">Baby Groot</h2>
-					<p class="descricao">Groot é uma árvore alienígena poderosa, ele possui várias habilidades físicas semelhantes a uma árvore normal e grande, e entre elas uma força maior que o normal, capaz de vencer lutando mão-a-mão e derrubar e quebrar qualquer objeto. Groot também pode se regenerar e reconstruir membros feridos. E além disso Groot também pode fazer crescer seus membros em formas de cipós e pode liberar esporos de luz.</p>
+					<p class="descricao">Groot é uma árvore alienígena poderosa, ele possui várias habilidades físicas semelhantes a uma árvore normal e grande, capaz de vencer lutando mão-a-mão e derrubar e quebrar qualquer objeto. Groot também pode se regenerar e reconstruir membros feridos. E além disso, também pode fazer crescer seus membros em formas de cipós e liberar esporos de luz.</p>
 				</div>
 			</div>
 
@@ -31,7 +31,7 @@
 				<div class="conteudo">
 					<i class="logo"></i>
 					<h2 class="nome-personagem">Rocket Raccoon</h2>
-					<p class="descricao">Rocket tem os sentidos intensificados para níveis bem acima dos humanos. Extremamente bem adaptado a condições de pouca luz. Seu reforçado olfato lhe permite detectar mudanças sutis em aromas/odores ao seu redor, o que permite a detecção da aproximação de outras pessoas e aumenta sua capacidade de operar na escuridão. Com a sua ampla gama auditiva ele pode perceber tons fora da audição humana, bem como sons sutis causados por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de tocá-los com vibrissas localizadas acima de suas garras.</p>
+					<p class="descricao">Seu reforçado olfato lhe permite detectar mudanças sutis em aromas/odores ao seu redor, o que permite a detecção da aproximação de outras pessoas e aumenta sua capacidade de operar na escuridão. Com a sua ampla gama auditiva ele pode perceber tons fora da audição humana, bem como sons sutis causados por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de tocá-los, com vibrissas localizadas acima de suas garras.</p>
 				</div>
 			</div>
 
