--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="conteudo">
 					<i class="logo"></i>
 					<h2 class="nome-personagem">Rocket Raccoon</h2>
-					<p class="descricao">Seu reforçado olfato lhe permite detectar mudanças sutis em aromas/odores ao seu redor, o que permite a detecção da aproximação de outras pessoas e aumenta sua capacidade de operar na escuridão. Com a sua ampla gama auditiva ele pode perceber tons fora da audição humana, bem como sons sutis causados por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de tocá-los, com vibrissas localizadas acima de suas garras.</p>
+					<p class="descricao">Seu reforçado olfato lhe permite detectar mudanças sutis em odores ao seu redor, permitindo a detecção da aproximação de outras pessoas, o que aumenta sua capacidade de operar na escuridão. Com seu poder auditivo, ele pode perceber tons fora da audição humana, bem como sons sutis causados por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de tocá-los, com vibrissas localizadas acima de suas garras.</p>
 				</div>
 			</div>
 
