--- a/index.html
+++ b/index.html
@@ -1,138 +1,162 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap" rel="stylesheet" />
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="./src/css/reset.css" />
-		<link rel="stylesheet" href="./src/css/estilos.css" />
-		<link rel="stylesheet" href="./src/css/responsivo.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap" rel="stylesheet" />
 
-		<title>Projeto Guardiões das Galáxias</title>
-	</head>
+	<link rel="stylesheet" href="./src/css/reset.css" />
+	<link rel="stylesheet" href="./src/css/estilos.css" />
+	<link rel="stylesheet" href="./src/css/responsivo.css" />
 
-	<body>
-		<main class="personagens">
-			<div class="personagem">
-				<img class="imagem" src="./src/imagens/personagem-groot.png" alt="Personagem Groot" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Baby Groot</h2>
-					<p class="descricao">Groot é uma árvore alienígena poderosa, ele possui várias habilidades físicas semelhantes a uma árvore normal e grande, capaz de vencer lutando mão-a-mão e derrubar e quebrar qualquer objeto. Groot também pode se regenerar e reconstruir membros feridos. E além disso, também pode fazer crescer seus membros em formas de cipós e liberar esporos de luz.</p>
-				</div>
+	<title>Projeto Guardiões das Galáxias</title>
+</head>
+
+<body>
+	<main class="personagens">
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-mantis.png" alt="Personagem Mantis" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Mantis</h2>
+				<p class="descricao">Empatia: Mantis pode sentir e manipular as emoções dos outros. Mantis consegue
+					estimular a preguiça, podendo fazer alguém dormir, ou pode estimular a raiva e etc. Comunicação
+					Vegetal: Mantis com a sua empatia pode se comunicar com plantas.</p>
 			</div>
+		</div>
 
-			<div class="personagem">
-				<img class="imagem" src="./src/imagens/personagem-raccoon.png" alt="Personagem Rocket Raccoon" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Rocket Raccoon</h2>
-					<p class="descricao">Seu reforçado olfato lhe permite detectar mudanças sutis em odores ao seu redor, permitindo a detecção da aproximação de outras pessoas, o que aumenta sua capacidade de operar na escuridão. Com seu poder auditivo, ele pode perceber tons fora da audição humana, bem como sons sutis causados por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de tocá-los, com vibrissas localizadas acima de suas garras.</p>
-				</div>
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-raccoon.png" alt="Personagem Rocket Raccoon" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Rocket Raccoon</h2>
+				<p class="descricao">Seu reforçado olfato lhe permite detectar mudanças sutis em odores ao seu redor,
+					permitindo a detecção da aproximação de pessoas, o que aumenta sua capacidade de operar na
+					escuridão. Com seu poder ele pode perceber tons fora da audição humana, bem como sons sutis causados
+					por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de
+					tocá-los, com vibrissas localizadas acima de suas garras.</p>
 			</div>
+		</div>
 
-			<div class="personagem selecionado">
-				<img class="imagem" src="./src/imagens/personagem-james-gunn.png" alt="Personagem James Gunn" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Senhor das Estrelas</h2>
-					<p class="descricao">Híbrido (humano/Spartoi): Peter Quill é filho de uma humana e um Spartoi, e sua fisiologia hibrida fornece a ele habilidades sobre humanas. Mestre em combate corpo-a-corpo: o Senhor das Estrelas é muito hábil em vários estilos de luta, assim como um talentoso piloto de naves espaciais.</p>
-				</div>
+		<div class="personagem selecionado">
+			<img class="imagem" src="./src/imagens/personagem-james-gunn.png" alt="Personagem Senhor das Estrelas" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Senhor das Estrelas</h2>
+				<p class="descricao">Híbrido (Humano/Spartoi): Peter Quill é filho de uma humana e um spartoi, e sua
+					fisiologia hibrida fornece a ele habilidades sobre humanas. Mestre em combate corpo-a-corpo: o
+					Senhor das Estrelas é muito hábil em vários estilos de luta, assim como um talentoso piloto de naves
+					espaciais.</p>
 			</div>
+		</div>
 
-			<div class="personagem">
-
-				<img class="imagem" src="./src/imagens/personagem-mantis.png" alt="Personagem Mantis" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Mantis</h2>
-					<p class="descricao">Empatia: Mantis pode sentir e manipular as emoções dos outros. Mantis consegue estimular a preguiça, podendo fazer alguém dormir, ou pode estimular a raiva e etc. Comunicação Vegetal: Mantis com a sua empatia pode se comunicar com plantas.</p>
-				</div>
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-groot.png" alt="Personagem Groot" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Baby Groot</h2>
+				<p class="descricao">Groot é uma árvore alienígena poderosa, ele possui várias habilidades físicas
+					semelhantes a uma árvore normal e grande, capaz de vencer lutando mão-a-mão e derrubar e quebrar
+					qualquer objeto. Groot também pode se regenerar e reconstruir membros feridos. E além disso, também
+					pode fazer crescer seus membros em formas de cipós e liberar esporos de luz.</p>
 			</div>
+		</div>
 
-			<div class="personagem">
-				<img class="imagem" src="./src/imagens/personagem-drax.png" alt="Personagem Drax" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Drax</h2>
-					<p class="descricao">Os poderes de Drax incluíam maior resistência, vôo, e a capacidade de projetar rajadas de energia de suas mãos. O personagem por muitas vezes lutou contra Thanos, e se aliou muitas vezes aos heróis Capitão Marvel e Adam Warlock. Ele também era um membro do grupo conhecido como "Guarda do Infinito".</p>
-				</div>
-			</div>	
-
-			<div class="personagem">
-				<img class="imagem" src="./src/imagens/personagem-gamora.png" alt="Personagem Gamora" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Gamora</h2>
-					<p class="descricao"> Gamora é tida como a assassina mais perigosa da Via Láctea. Ela é uma atleta altamente qualificada treinada em ginástica, combate corpo-a-corpo, usos de vários armamentos conhecidos na galáxia e técnicas de stealth.</p>
-				</div>	
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-drax.png" alt="Personagem Drax" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Drax</h2>
+				<p class="descricao">Os poderes de Drax incluíam maior resistência, vôo, e a capacidade de projetar
+					rajadas de energia de suas mãos. O personagem por muitas vezes lutou contra Thanos, e se aliou
+					muitas vezes aos heróis Capitão Marvel e Adam Warlock. Ele também era um membro do grupo conhecido
+					como "Guarda do Infinito".</p>
 			</div>
+		</div>
 
-			<div class="personagem">
-				<img class="imagem" src="./src/imagens/personagem-yondu.png" alt="Personagem Yondu" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Yondu</h2>
-					<p class="descricao">Yondu é um espécime físico acima da média de sua raça. Ele pode levantar cerca de 375 kg. Aprendiz de caçador, Yondu é proficiente no uso de arco e flecha. Sua habilidade de assobiar com uma faixa de quatro oitavas facilita seus tiros com o arco. A língua nativa centauriana é um dialeto de grunhidos, cliques e assobios, mas Yondu conseguiu aprender português, embora seja doloroso para ele falar por muito tempo sem que sua garganta canse.</p>
-				</div>	
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-gamora.png" alt="Personagem Gamora" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Gamora</h2>
+				<p class="descricao"> Gamora é tida como a assassina mais perigosa da Via Láctea. Ela é uma atleta
+					altamente qualificada treinada em ginástica, combate corpo-a-corpo, usos de vários armamentos
+					conhecidos na galáxia e técnicas de stealth.</p>
 			</div>
+		</div>
 
-			<div class="personagem">
-				<img class="imagem" src="./src/imagens/personagem-nebulosa.png" alt="Personagem Nebulosa" />
-				<div class="conteudo">
-					<i class="logo"></i>
-					<h2 class="nome-personagem">Nebulosa</h2>
-					<p class="descricao">Fisiologia Lufomoidal e Aprimoramentos Cibernéticos: A Nebulosa possui capacidades físicas naturais superiores a qualquer ser humano, que são aprimoradas por suas melhorias fisiológicas.</p>
-				</div>	
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-yondu.png" alt="Personagem Yondu" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Yondu</h2>
+				<p class="descricao">Yondu é um espécime físico acima da média de sua raça. Ele pode levantar cerca de
+					375 kg. Aprendiz de caçador, Yondu é proficiente no uso de arco e flecha. Sua habilidade de assobiar
+					com uma faixa de quatro oitavas facilita seus tiros com o arco. A língua nativa centauriana é um
+					dialeto de grunhidos, cliques e assobios, mas Yondu conseguiu aprender português, embora seja
+					doloroso para ele falar por muito tempo sem que sua garganta canse.</p>
 			</div>
-		</main>
-		<ul class="botoes">
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-groot.png" alt="Tripulação Groot" />
-				</button>
-			</li>
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-raccoon.png" alt="Tripulação Raccoon" />
-				</button>
-			</li>
-			<li>
-				<button class="botao selecionado">
-					<img src="./src/imagens/tripulacao-james-gunn.png" alt="Tripulação James Gunn" />
-				</button>
-			</li>
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-mantis.png" alt="Tripulação Mantis" />
-				</button>
-			</li>
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-drax.png" alt="Tripulação Drax" />
-				</button>
-			</li>
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-gamora.png" alt="Tripulação Gamora" />
-				</button>
-			</li>
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-yondu.png" alt="Tripulação Yondu" />
-				</button>
-			</li>
-			<li>
-				<button class="botao">
-					<img src="./src/imagens/tripulacao-nebulosa.png" alt="Tripulação Nebulosa" />
-				</button>
-			</li>
-		</ul>
+		</div>
 
-		<script src="./src/js/index.js"></script>
-	</body>
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-nebulosa.png" alt="Personagem Nebulosa" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Nebulosa</h2>
+				<p class="descricao">Fisiologia Lufomoidal e Aprimoramentos Cibernéticos: A Nebulosa possui capacidades
+					físicas naturais superiores a qualquer ser humano, que são aprimoradas por suas melhorias
+					fisiológicas.</p>
+			</div>
+		</div>
+	</main>
+	<ul class="botoes">
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-mantis.png" alt="Tripulação Mantis" />
+			</button>
+		</li>
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-raccoon.png" alt="Tripulação Raccoon" />
+			</button>
+		</li>
+		<li>
+			<button class="botao selecionado">
+				<img src="./src/imagens/tripulacao-james-gunn.png" alt="Tripulação Senhor das Estrelas" />
+			</button>
+		</li>
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-groot.png" alt="Tripulação Groot" />
+			</button>
+		</li>
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-drax.png" alt="Tripulação Drax" />
+			</button>
+		</li>
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-gamora.png" alt="Tripulação Gamora" />
+			</button>
+		</li>
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-yondu.png" alt="Tripulação Yondu" />
+			</button>
+		</li>
+		<li>
+			<button class="botao">
+				<img src="./src/imagens/tripulacao-nebulosa.png" alt="Tripulação Nebulosa" />
+			</button>
+		</li>
+	</ul>
+
+	<script src="./src/js/index.js"></script>
+</body>
+
 </html>
