--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="./src/css/estilos.css" />
 	<link rel="stylesheet" href="./src/css/responsivo.css" />
 
-	<title>Projeto Guardiões das Galáxias</title>
+	<title>Projeto Guardiões da Galáxia</title>
 </head>
 
 <body>
@@ -112,6 +112,17 @@
 					fisiológicas.</p>
 			</div>
 		</div>
+
+		<div class="personagem">
+			<img class="imagem" src="./src/imagens/personagem-cosmo.png" alt="Personagem Cosmo" />
+			<div class="conteudo">
+				<i class="logo"></i>
+				<h2 class="nome-personagem">Cosmo</h2>
+				<p class="descricao">Fisiologia Lufomoidal e Aprimoramentos Cibernéticos: A Nebulosa possui capacidades
+					físicas naturais superiores a qualquer ser humano, que são aprimoradas por suas melhorias
+					fisiológicas.</p>
+			</div>
+		</div>
 	</main>
 	<ul class="botoes">
 		<li>
@@ -152,6 +163,11 @@
 		<li>
 			<button class="botao">
 				<img src="./src/imagens/tripulacao-nebulosa.png" alt="Tripulação Nebulosa" />
+			</button>
+		</li>
+		<li>
+			<button class="botao" class="cosmo">
+				<img src="./src/imagens/tripulacao-cosmo.png" alt="Tripulação Cosmo" />
 			</button>
 		</li>
 	</ul>
