--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
 			<div class="conteudo">
 				<i class="logo"></i>
 				<h2 class="nome-personagem">Cosmo</h2>
-				<p class="descricao">Fisiologia Lufomoidal e Aprimoramentos Cibernéticos: A Nebulosa possui capacidades
-					físicas naturais superiores a qualquer ser humano, que são aprimoradas por suas melhorias
-					fisiológicas.</p>
+				<p class="descricao">Cosmo já existia nos quadrinhos e, foi lançada ao espaço como parte do programa russo. A cadela não apenas sobreviveu, como também desenvolveu poderes que permitem a comunicação pela mente e a telecinesia (capacidade de movimentar objetos usando apenas a mente).</p>
 			</div>
 		</div>
 	</main>
@@ -166,7 +164,7 @@
 			</button>
 		</li>
 		<li>
-			<button class="botao" class="cosmo">
+			<button class="botao">
 				<img src="./src/imagens/tripulacao-cosmo.png" alt="Tripulação Cosmo" />
 			</button>
 		</li>
