--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<div class="conteudo">
 				<i class="logo"></i>
 				<h2 class="nome-personagem">Rocket Raccoon</h2>
-				<p class="descricao">Seu reforçado olfato lhe permite detectar mudanças sutis em odores ao seu redor,
-					permitindo a detecção da aproximação de pessoas, o que aumenta sua capacidade de operar na
+				<p class="descricao">Capacidade de sentir mudanças sutis em odores ao seu redor,
+					detecção da aproximação de pessoas, o que aumenta sua habilidade de operar na
 					escuridão. Com seu poder ele pode perceber tons fora da audição humana, bem como sons sutis causados
 					por vibrações na terra. Suas patas hipersensíveis lhe permitem identificar objetos antes de
 					tocá-los, com vibrissas localizadas acima de suas garras.</p>
@@ -94,11 +94,10 @@
 			<div class="conteudo">
 				<i class="logo"></i>
 				<h2 class="nome-personagem">Yondu</h2>
-				<p class="descricao">Yondu é um espécime físico acima da média de sua raça. Ele pode levantar cerca de
-					375 kg. Aprendiz de caçador, Yondu é proficiente no uso de arco e flecha. Sua habilidade de assobiar
+				<p class="descricao">Como uma espécime físico acima da média de sua raça, ele pode levantar cerca de
+					375 kg. Aprendiz de caçador, proficiente no uso de arco e flecha. Sua habilidade de assobiar
 					com uma faixa de quatro oitavas facilita seus tiros com o arco. A língua nativa centauriana é um
-					dialeto de grunhidos, cliques e assobios, mas Yondu conseguiu aprender português, embora seja
-					doloroso para ele falar por muito tempo sem que sua garganta canse.</p>
+					dialeto de grunhidos, cliques e assobios, mas Yondu conseguiu aprender português.</p>
 			</div>
 		</div>
 
